smoketest/k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: PG_ENCRYPT_KEY
              value: REPLACEME
            - name: POSTGRESQL_DATABASE
              value: cryostat3
            - name: POSTGRESQL_PASSWORD
              value: cryostat3
            - name: POSTGRESQL_USER
              value: cryostat3
          image: quay.io/cryostat/cryostat-db:latest
          livenessProbe:
            exec:
              command:
                - pg_isready -U cryostat3 -d cryostat3 || exit 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresql
      hostname: db
      restartPolicy: Always
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgresql
status: {}
