smoketest/k8s/db-viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o /home/andrew/workspace/cryostat3/smoketest/k8s -f /home/andrew/workspace/cryostat3/smoketest/k8s/../../container-compose.yml
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: db-viewer
  name: db-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-viewer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o /home/andrew/workspace/cryostat3/smoketest/k8s -f /home/andrew/workspace/cryostat3/smoketest/k8s/../../container-compose.yml
        kompose.version: 1.27.0 (b0ed6a2c9)
      creationTimestamp: null
      labels:
        io.kompose.service: db-viewer
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: admin@cryostat.io
            - name: PGADMIN_DEFAULT_PASSWORD
              value: admin
            - name: PGADMIN_LISTEN_PORT
              value: "8989"
          image: docker.io/dpage/pgadmin4:6
          name: db-viewer
          ports:
            - containerPort: 8989
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin
            - mountPath: /pgadmin4/servers.json
              name: db-viewer-claim1
      hostname: db-viewer
      restartPolicy: Always
      volumes:
        - name: pgadmin
          persistentVolumeClaim:
            claimName: pgadmin
        - name: db-viewer-claim1
          persistentVolumeClaim:
            claimName: db-viewer-claim1
status: {}
