smoketest/k8s/s3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.service.expose: minio
  creationTimestamp: null
  labels:
    io.kompose.service: s3
  name: s3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: s3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.service.expose: minio
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.service: s3
    spec:
      containers:
        - args:
            - server
            - /data
            - --console-address
            - :9001
          image: docker.io/minio/minio:latest
          livenessProbe:
            exec:
              command:
                - mc
                - ready
                - local
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: s3
          ports:
            - containerPort: 9001
              hostPort: 9001
              protocol: TCP
            - containerPort: 9000
              hostPort: 9000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio-data
            - mountPath: /certs
              name: minio-certs
      hostname: s3
      restartPolicy: Always
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
        - name: minio-certs
          persistentVolumeClaim:
            claimName: minio-certs
status: {}
