smoketest/k8s/sample-app-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    io.cryostat.discovery: "true"
    io.cryostat.jmxHost: sample-app-1
    io.cryostat.jmxPort: "9093"
  creationTimestamp: null
  labels:
    io.kompose.service: sample-app-1
  name: sample-app-1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sample-app-1
  strategy: {}
  template:
    metadata:
      annotations:
        io.cryostat.discovery: "true"
        io.cryostat.jmxHost: sample-app-1
        io.cryostat.jmxPort: "9093"
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.service: sample-app-1
    spec:
      containers:
        - env:
            - name: CRYOSTAT_AGENT_APP_NAME
              value: vertx-fib-demo-1
            - name: CRYOSTAT_AGENT_AUTHORIZATION
              value: Basic dXNlcjpwYXNz
            - name: CRYOSTAT_AGENT_BASEURI
              value: http://cryostat:8181/
            - name: CRYOSTAT_AGENT_CALLBACK
              value: http://sample-app-1:8910/
            - name: CRYOSTAT_AGENT_TRUST_ALL
              value: "true"
            - name: CRYOSTAT_AGENT_WEBCLIENT_SSL_TRUST_ALL
              value: "true"
            - name: CRYOSTAT_AGENT_WEBCLIENT_SSL_VERIFY_HOSTNAME
              value: "false"
            - name: CRYOSTAT_AGENT_WEBSERVER_HOST
              value: sample-app-1
            - name: CRYOSTAT_AGENT_WEBSERVER_PORT
              value: "8910"
            - name: HTTP_PORT
              value: "8081"
            - name: JMX_PORT
              value: "9093"
          image: quay.io/andrewazores/vertx-fib-demo:0.13.0
          livenessProbe:
            exec:
              command:
                - curl --fail http://localhost:8081 || exit 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: sample-app-1
          ports:
            - containerPort: 8081
              hostPort: 8081
              protocol: TCP
          resources: {}
      hostname: vertx-fib-demo-1
      restartPolicy: Always
status: {}
