smoketest/k8s/sample-app-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: sample-app-2
  name: sample-app-2
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sample-app-2
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/compose-default: "true"
        io.kompose.service: sample-app-2
    spec:
      containers:
        - env:
            - name: CRYOSTAT_AGENT_APP_NAME
              value: vertx-fib-demo-2
            - name: CRYOSTAT_AGENT_AUTHORIZATION
              value: Basic dXNlcjpwYXNz
            - name: CRYOSTAT_AGENT_BASEURI
              value: http://cryostat:8181/
            - name: CRYOSTAT_AGENT_CALLBACK
              value: http://sample-app-2:8911/
            - name: CRYOSTAT_AGENT_TRUST_ALL
              value: "true"
            - name: CRYOSTAT_AGENT_WEBCLIENT_SSL_TRUST_ALL
              value: "true"
            - name: CRYOSTAT_AGENT_WEBCLIENT_SSL_VERIFY_HOSTNAME
              value: "false"
            - name: CRYOSTAT_AGENT_WEBSERVER_HOST
              value: sample-app-2
            - name: CRYOSTAT_AGENT_WEBSERVER_PORT
              value: "8911"
            - name: HTTP_PORT
              value: "8082"
            - name: JMX_PORT
              value: "9094"
            - name: USE_AUTH
              value: "true"
          image: quay.io/andrewazores/vertx-fib-demo:0.13.0
          livenessProbe:
            exec:
              command:
                - curl --fail http://localhost:8081 || exit 1
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          name: sample-app-2
          ports:
            - containerPort: 8082
              hostPort: 8082
              protocol: TCP
          resources: {}
      hostname: vertx-fib-demo-2
      restartPolicy: Always
status: {}
