smoketest/k8s/db-viewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.service.expose: pgadmin
  creationTimestamp: null
  labels:
    io.kompose.service: db-viewer
  name: db-viewer
spec:
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  selector:
    io.kompose.service: db-viewer
status:
  loadBalancer: {}
