smoketest/k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o /home/andrew/workspace/cryostat3/smoketest/k8s -f /home/andrew/workspace/cryostat3/smoketest/k8s/../../container-compose.yml
    kompose.service.expose: minio
    kompose.version: 1.27.0 (b0ed6a2c9)
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: minio
status:
  loadBalancer: {}
