smoketest/k8s/quarkus-test-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ -f ./../compose/db_k8s.yml -f ./../compose/s3-minio.yml -f ./../compose/cryostat_k8s.yml -f ./../compose/sample-apps.yml --build local
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: quarkus-test-agent
  name: quarkus-test-agent
  namespace: default
spec:
  ports:
    - name: "9977"
      port: 9977
      targetPort: 9977
    - name: "10010"
      port: 10010
      targetPort: 10010
  selector:
    io.kompose.service: quarkus-test-agent
status:
  loadBalancer: {}
