smoketest/k8s/s3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ -f ./../compose/db_k8s.yml -f ./../compose/s3-minio.yml -f ./../compose/cryostat_k8s.yml -f ./../compose/sample-apps.yml --build local
    kompose.service.expose: minio
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: s3
  name: s3
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: s3
status:
  loadBalancer: {}
