smoketest/k8s/sample-app-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.cryostat.discovery: "true"
    io.cryostat.jmxHost: sample-app-1
    io.cryostat.jmxPort: "9093"
  creationTimestamp: null
  labels:
    io.kompose.service: sample-app-1
  name: sample-app-1
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: sample-app-1
status:
  loadBalancer: {}
