smoketest/k8s/sample-app-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: sample-app-2
  name: sample-app-2
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    io.kompose.service: sample-app-2
status:
  loadBalancer: {}
