smoketest/k8s/sample-app-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: sample-app-3
  name: sample-app-3
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    io.kompose.service: sample-app-3
status:
  loadBalancer: {}
