smoketest/k8s/sample-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    io.cryostat.discovery: "true"
    io.cryostat.jmxHost: sample-app
    io.cryostat.jmxPort: "9093"
    kompose.cmd: kompose convert -o ./ -f ./../compose/db_k8s.yml -f ./../compose/s3-minio.yml -f ./../compose/cryostat_k8s.yml -f ./../compose/sample-apps.yml --build local
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sample-app
  name: sample-app
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: sample-app
status:
  loadBalancer: {}
