smoketest/k8s/cryostat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    io.cryostat.discovery: "true"
    io.cryostat.jmxHost: localhost
    io.cryostat.jmxPort: "0"
    io.cryostat.jmxUrl: service:jmx:rmi:///jndi/rmi://localhost:0/jmxrmi
    kompose.service.expose: cryostat3
  creationTimestamp: null
  labels:
    io.kompose.service: cryostat
  name: cryostat
spec:
  rules:
    - host: cryostat3
      http:
        paths:
          - backend:
              service:
                name: cryostat
                port:
                  number: 8181
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
