smoketest/k8s/s3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -o ./ -f ./../compose/db_k8s.yml -f ./../compose/s3-minio.yml -f ./../compose/cryostat_k8s.yml -f ./../compose/sample-apps.yml --build local
    kompose.service.expose: minio
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: s3
  name: s3
spec:
  rules:
    - host: minio
      http:
        paths:
          - backend:
              service:
                name: s3
                port:
                  number: 9001
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
